# rrr

./: .gitignore  CMakeLists.txt  README.md  aarr_test.c  lights.c  main.c  ray_pk4.c  ray_pk4.h  rrr.lua  scene.h  scene.lua  surfaces.c  surfaces.h
libs/: portable.h  vec.h  vecp.c  vecp.h
libs/generic/: aarr.c  aarr.h
libs/math/: common.c  common.h  vcommon.c  vcommon.h  vec.c  vec.h  vecp.c  vecp.h
libs/rt/: lights.h  ray_pk4.h  scene.c  scene.h  surfaces.c  surfaces.h
libs/scripting/: obj_buf.c  obj_buf.h  scene.c  scene.h  scommon.h
scripting/: rrr.lua  scene.lua
